--- a/teste2/app.html
+++ b/teste2/app.html
@@ -22,7 +22,7 @@
 
   <!-- Carregar a API do Google Maps -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA34Dhu6E-o8jY3NEjgG7poqCAk7hb5VzM
+    src="https://maps.googleapis.com/maps/api/js?key=CHAVE
     &callback=initMap"
     async
     defer
